# sleepy-capybara-chat

./: .env.example  .gitignore  Makefile  README.md  deployment-guide.md  docker-compose.prod.yml  docker-compose.yml  todo.md
backend/: .env.example  .flake8  Dockerfile  Dockerfile.prod  alembic.ini  mypy.ini  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py
backend/app/api/auth/: auth.py
backend/app/api/chat/: __init__.py  chat.py
backend/app/api/models/: models.py
backend/app/api/users/: users.py
backend/app/api/v1/: api.py
backend/app/api/v1/admin/: token_limits.py
backend/app/api/v1/auth/: __init__.py  auth.py
backend/app/api/v1/chat/: chat.py
backend/app/api/v1/models/: models.py
backend/app/api/v1/users/: users.py
backend/app/core/: __init__.py  config.py  deps.py  security.py  token.py
backend/app/db/: __init__.py  seed.py  session.py
backend/app/models/: __init__.py  base.py  chat.py  token_limit.py  token_usage.py  user.py
backend/app/models/email/: __init__.py  resend_tracking.py
backend/app/schemas/: __init__.py  auth.py  chat.py  email.py  enums.py  token_limit.py  token_usage.py  user.py
backend/app/services/: chat.py  email.py  token_usage.py
backend/app/services/chat/: __init__.py  base.py  chat.py  ollama.py  openai.py
backend/app/services/email/: __init__.py  base.py  email.py  gmail.py  mailhog.py  sendgrid.py
backend/app/services/templates/: password_reset.html  verification.html
backend/migrations/: env.py
backend/migrations/versions/: 43b943c73c86_rename_model_name_to_model_id_and_.py  55583d348de6_change_token_limit_model_name_to_enum_.py  637f3b560cdd_add_default_value_for_is_admin.py  69eb925ebbf5_fix_reset_token_expires_at_type_to_.py  6eae8c401b59_remove_model_name_from_session.py  8a1b2c3d4e5f_add_gpt5_nano_to_aimodelid_enum.py  a4138a44af46_simplify_token_limits.py  b680bad88cbb_add_token_limits_relation_to_user_and_.py  c80a297164ec_add_model_name_to_messages.py  cc12785e15bb_fix_token_usage_session_cascade_delete.py  d6826bca0be3_rename_token_usage_fields_to_prompt_.py  dcb93fbca40b_add_token_usage_and_limit_tables.py  ddb6fc93d72b_add_cascade_delete_relationships_for_.py  ec1959b8effa_add_thinking_content_to_messages.py  email_resend_tracking.py  f441fa3543fc_initial_schema_setup.py  f5bba83acca9_add_email_verification_fields.py  initial.py
backend/tests/: conftest.py  test_main.py
backend/tests/api/auth/: test_resend_confirmation.py
backend/tests/api/v1/auth/: test_resend_confirmation.py
backend/tests/backend/: test_openai_provider.py  test_token_limits.py
backend/tests/services/: test_token_usage.py
backend/tests/services/chat/: test_openai_provider.py
docs/: ENV_MANAGEMENT.md  database-migrations.md  https-deployment-troubleshooting.md  password_reset_specification.md  streaming-implementation.md
frontend/: .env.example  DEVELOPMENT.md  Dockerfile  Dockerfile.prod  next.config.ts  package-lock.json  package.json
frontend/docs/: page_navigation_design.md  style_theming_issues.md
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/auth/: layout.tsx
frontend/src/app/chat/: page.tsx
frontend/src/app/profile/: page.tsx
frontend/src/components/auth/: ProtectedRoute.tsx
frontend/src/components/chat/: ChatHeader.tsx  (+3 more)
frontend/src/hooks/: useAuth.ts
frontend/src/utils/: api.ts  constants.ts
nginx/: nginx.conf
(+18 files in other folders)
