[tool.poetry]
name = "sleepy-capybara-chat-backend"
version = "0.1.0"
description = "Backend for Sleepy Capybara Chat"
authors = ["Your Name <your.email@example.com>"]
packages = [
    { include = "app" }
]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
sqlalchemy = "^2.0.25"
psycopg2-binary = "^2.9.9"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
pydantic = "^2.11.0"
httpx = "^0.26.0"
pydantic-settings = "^2.2.1"
email-validator = "^2.2.0"
alembic = "^1.15.2"
fastapi-mail = "^1.4.2"
sendgrid = "^6.11.0"
jinja2 = "^3.1.3"
openai = "^1.76.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
black = "^24.1.1"
isort = "^5.13.2"
flake8 = "^7.0.0"
mypy = "^1.15.0"
types-python-jose = "^3.4.0.20250224"
types-passlib = "^1.7.7.20250401"
sqlalchemy-utils = "^0.41.2"
pytest-asyncio = "^1.0.0"
pytest-cov = "^6.1.1"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"  
